--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
     "build:clean": "rm -rf lib",
     "build:lib": "tsc",
     "prepublish": "NODE_ENV=production npm run build",
-    "dev:server": "EXAMPLE=true webpack-dev-server --port 3124 --hot --inline --content-base example/public",
+    "dev:server": "EXAMPLE=true NODE_ENV=production webpack-dev-server --port 3124 --hot",
     "dev:compile": "tsc --watch",
     "dev": "npm run dev:server"
   },
   "author": "Graham Kaemmer",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "7.8.7",
-    "@babel/preset-react": "^7.8.3",
-    "@types/react": "^17.0.0",
-    "babel-loader": "^8.0.6",
-    "html-webpack-plugin": "^3.2.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "styled-components": "^1.1.3",
-    "typescript": "^4.1.3",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@types/react": "^19.1.10",
+    "babel-loader": "^10.0.0",
+    "concurrently": "^9.2.0",
+    "html-webpack-plugin": "^5.6.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.19",
+    "typescript": "^5.9.2",
+    "webpack": "5.94.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.2"
   },
   "peerDependencies": {
-    "react": "^16.8 || 17"
+    "react": "^18.3.1"
   }
 }
