--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "type": "git"
   },
   "scripts": {
-
     "prepare": "npm run build",
     "build": "npm run build:clean && npm run build:lib",
-    "build:clean": "rm -rf lib",
+    "build:clean": "rimraf lib",
     "build:lib": "tsc",
-    "prepublish": "NODE_ENV=production npm run build",
-    "dev:server": "EXAMPLE=true NODE_ENV=production webpack-dev-server --port 3124 --hot",
+    "prepublish": "cross-env NODE_ENV=production npm run build",
+    "dev:server": "cross-env EXAMPLE=true NODE_ENV=production webpack-dev-server --port 3124 --hot",
     "dev:compile": "tsc --watch",
     "dev": "npm run dev:server"
   },
@@ -29,9 +28,11 @@
     "@types/react": "^19.1.10",
     "babel-loader": "^10.0.0",
     "concurrently": "^9.2.0",
+    "cross-env": "^7.0.3",
     "html-webpack-plugin": "^5.6.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rimraf": "^6.0.1",
     "styled-components": "^6.1.19",
     "typescript": "^5.9.2",
     "webpack": "5.94.0",
@@ -42,3 +43,4 @@
     "react": "^18.3.1"
   }
 }
+
